[project]
name = "bierchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty==0.0.29",
]

[tool.ruff]
line-length = 150

lint.select = [
    "FAST",
    "E",
    "W"
]
